# rag-poc

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  Readme.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: deps.py  routes.py  schemas.py
app/config/: __init__.py  logging.py  settings.py
app/domain/: __init__.py  models.py
app/ingestion/: __main__.py  chunker.py  cli.py  parser.py  pipeline.py
app/providers/embeddings/: __init__.py  base.py  bge_m3.py
app/providers/llm/: __init__.py  base.py  claude.py  ollama.py
app/providers/vectorstore/: __init__.py  base.py  qdrant.py
app/services/: __init__.py  language.py  prompt.py  rag.py
content/syote/accommodations/: cabin-standard.md  glass-igloo.md  hotel-room.md
content/syote/activities/: berry-picking.md  cross-country-skiing.md  downhill-skiing.md  fat-bike-tour.md  husky-safari-2h.md  ice-fishing.md  northern-lights-hunt.md  reindeer-safari.md  snowshoe-hike.md  summer-hike-iso-syote.md
content/syote/dining/: main-restaurant.md  pub-kotka.md
content/syote/practical/: check-in-out.md  emergency-contacts.md  equipment-rental.md  getting-here.md  ski-lift-passes.md  weather-clothing.md
docs/: ARCHITECTURE.md  OPERATIONS_MACOS.md  OPERATIONS_UBUNTU.md
tests/: test_chunker.py  test_language.py  test_ollama_provider.py  test_parser.py  test_rag_flow.py
